# mathpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/mathpp/: gcd.hh  group_traits.hh  linalg.hh  logic.hh  mathpp.hh  matrix.hh  mod.hh  poly.hh  polyconv.hh  speed.hh  vector.hh
test/: test_gcd.cc  test_group_traits.cc  test_linalg.cc  test_logic.cc  test_mathpp.cc  test_matrix.cc  test_mod.cc  test_poly.cc  test_polyconv.cc  test_vector.cc
